--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+@layer base {
+  @font-face {
+    font-family: Neue;
+    font-weight: 400;
+      src: url(./assets/fonts/NeueHaasDisplay-Roman.woff2);
+  }
+  @font-face {
+    font-family: Neue;
+    font-weight: 800;
+     src: url(./assets/fonts/NeueHaasDisplay-Mediu.woff2);
+  }
+}
