--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,14 @@
      src: url(./assets/fonts/NeueHaasDisplay-Mediu.woff2);
   }
 }
+
+
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 380ms ease-in;
+}
