--- a/src/index.css
+++ b/src/index.css
@@ -27,14 +27,15 @@
   transition: opacity 380ms ease-in;
 }
 
-.Underline {
+.underlineTop,
+.underlineBottom {
   position: relative;
 }
 
-.Underline::before {
+.underlineTop:before,
+.underlineBottom::before {
   content: "";
   position: absolute;
-  top: 0;
   right: 0;
   width: 0;
   height: 1px;
@@ -42,8 +43,17 @@
   transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
 }
 
+.underlineTop:before{
+  top:0;
+}
+
+.underlineBottom:before {
+  bottom: 0;
+}
+
 @media (hover: hover) and (pointer: fine) {
-  .Underline:hover::before {
+  .underlineTop:hover::before,
+  .underlineBottom:hover::before {
     left: 0;
     right: auto;
     width: 100%;
