--- a/src/index.css
+++ b/src/index.css
@@ -43,12 +43,16 @@
   transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
 }
 
-.underlineTop:before{
-  top:0;
+.underlineTop:before {
+  top: 0;
 }
 
 .underlineBottom:before {
   bottom: 0;
+}
+
+.underlineBlack:before {
+  background-color: black;
 }
 
 @media (hover: hover) and (pointer: fine) {
